sf-agile-app/src/objects/TaskEffort__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipName>TaskEffort</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Task Effort</relationshipLabel>
        <relationshipName>TaskEffort</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Effort</relationshipLabel>
        <relationshipName>TaskEffort</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskEffort</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Effort</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Task Effort ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Effort</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sprint_NotNull</fullName>
        <active>true</active>
        <errorConditionFormula>Sprint__c = NULL</errorConditionFormula>
        <errorMessage>The parent Story must be assigned to a Sprint before Task Effort can be assigned.</errorMessage>
    </validationRules>
</CustomObject>